--- a/index.html
+++ b/index.html
@@ -1,9 +1,72 @@
 <!DOCTYPE html>
-<html>
+<!--ICS2O-unit1-08-HTML-Template-->
+<html lang="en-ca">
   <head>
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <meta name="description" content="Area and Perimter, Js" />
+    <meta name="keywords" content="mths, ICS2O" />
+    <meta name="author" content="Lamees-Hemdan" />
+    <meta name="viewport" content="width=device-width, intitial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link
+      rel="stylesheet"
+      href="https://code.getmdl.io/1.3.0/material.blue_grey-amber.min.css"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./js/script.js"/>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon-16x16.png"
+    />
+    <link rel="manifest" href="./site.webmanifest" />
+    <title>Area and Perimeter, Js</title>
   </head>
   <body>
-    <p>Paragraph</p>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script  src="./js/script.js"></script>
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed header">
+      <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+          <span class="mdl-layout-title">Area and Perimeter</span>
+        </div>
+      </header>
+      <main class="mdl-layout__content">
+        <div class="page-content">Calculate Area and Perimeter of a Rectangle with Dimensions of 10cm and 5cm </div>
+        <image src="./images/area_and_perimeter.png" alt="world" width="30%" hight="auto" style="padding: 100 px;" />
+        <br />
+        <!--Basic text-->
+        <div id="perimeter">
+          <p>Perimeter = ?</p>
+        </div>
+        <div id="area">
+          <p>Area = ?</p>
+          </div>
+        <!-- Accent-colored raised button with ripple -->
+        <button
+          class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+          onclick="doMathClicked()"
+          >
+          Check Your Answer
+        </button>
+        <br />
+        <br />
+        </main>
+    </div>
   </body>
 </html>
