edited page title

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
       </header>
       <main class="mdl-layout__content">
-        <div class="page-content">Calculate Area and Perimeter of a Rectangle with Dimensions of 10cm and 5cm </div>
+        <div class="page-content">The Dimensions of a Rectangle are: 5cm and 3cm </div>
         <image src="./images/area_and_perimeter.png" alt="world" width="30%" hight="auto" style="padding: 100 px;" />
         <br />
         <!--Basic text-->
